--- a/happy_pets/src/components/BackgroundForForm/MainForm/MainForm.css
+++ b/happy_pets/src/components/BackgroundForForm/MainForm/MainForm.css
@@ -14,12 +14,14 @@
   flex-direction: column;
   flex-wrap: wrap;
   justify-content: space-between;
+  position: absolute;
 }
 
 .wrapper-for-button {
   min-height: 1px;
-  padding-right: 15px;
-  padding-left: 15px;
+  padding-right: 0px;
+  padding-left: 0px;
+  margin-block-end: 7px;
   display: flex;
   flex-direction: row;
   justify-content: space-between;
@@ -31,7 +33,8 @@
   flex-direction: column;
   width: 50%;
   justify-content: space-between;
-  margin-inline: 7px;
+  margin-inline: 5px;
+  margin-block-end: 40px;
 }
 
 .form-input-name .input-name__title {
