init: redux, but now he doesn't work

--- a/happy_pets/src/components/BackgroundForForm/MainForm/MainForm.css
+++ b/happy_pets/src/components/BackgroundForForm/MainForm/MainForm.css
@@ -2,6 +2,7 @@
   display: block;
   margin-top: 0em;
   background: #ffffff;
+  margin-left: 5px;
   border-radius: 10px;
   padding: 20px 15px;
   height: 80%;
