--- a/src/components/HeaderApp/HeaderApp.css
+++ b/src/components/HeaderApp/HeaderApp.css
@@ -91,3 +91,70 @@
     background-color: #cfd8dc;
   }
 }
+
+.navbar.navbar-default {
+  background-color: #4b0082;
+  border: none;
+}
+
+.navbar.navbar-default .navbar-brand {
+  color: #f6efdb;
+}
+
+.navbar.navbar-default .navbar-nav > li > a {
+  color: #ffffff;
+  text-transform: uppercase;
+  font-size: 14px;
+}
+
+.navbar.navbar-default .navbar-nav > li > a:hover,
+.navbar.navbar-default .navbar-nav > li > a:focus {
+  color: rgb(253, 174, 124);
+}
+.navbar.navbar-default .navbar-nav > .active > a,
+.navbar.navbar-default .navbar-nav > .active > a:focus,
+.navbar.navbar-default .navbar-nav > .active > a:hover {
+  background-color: #ffffff;
+  color: #fff;
+}
+.navbar.navbar-default .navbar-toggle .icon-bar,
+.navbar.navbar-default .navbar-toggle .icon-bar:hover {
+  background-color: #ffffff;
+  border: none;
+}
+
+#headerwrap {
+  margin-top: 20px;
+  padding-top: 60px;
+  text-align: center;
+  background-attachment: relative;
+  background-position: center center;
+  min-height: 700px;
+  width: 100%;
+  font-family: "Arial Black", Gadget, sans-serif;
+
+  background-size: 100%;
+
+  -webkit-background-size: cover;
+  background-size: cover;
+}
+
+#headerwrap h1 {
+  margin-top: 30px;
+  font-size: 50px;
+  font-weight: 500;
+  color: #fff;
+  background-color: #4b0082;
+  letter-spacing: 3px;
+  padding: 10px 0;
+}
+
+#headerwrap h2 {
+  margin-top: 30px;
+  font-size: 30px;
+  font-weight: 500;
+  color: #fff;
+  background-color: #4b0082;
+  letter-spacing: 2px;
+  padding: 10px 0;
+}
